change deploy to use docker

--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: tomcat
+- hosts: tomcat1
   serial: 1
   become: yes
   become_method: sudo
@@ -7,21 +7,20 @@
   #  package_name: devopsarea-1.0.war
 
   tasks:
-   - name: Install Java
-     apt: name=default-jdk state=present
+   - name: install docker-py package
+      pip: name=docker-py
 
-   - name: Install Tomcat
-     apt: name=tomcat8 state=present
-
-   - name: Install Tomcat admin
-     apt: name=tomcat8-admin state=present
+   - name: Running the container
+       docker_container:
+         image: tomcat:latest
+         state: running
 
    - name: Configure Tomcat users
      copy:
        src: tomcat-users.xml
-       dest: /etc/tomcat8/
+       dest: /etc/tomcat*/
        owner: root
-       group: tomcat8
+       group: tomcat*
        mode: 0640
 
    - name: Stop the firewall
