--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -7,6 +7,9 @@
   #  package_name: devopsarea-1.0.war
 
   tasks:
+   - name: Install pip
+     apt: name=python-pip state=present
+
    - name: install docker-py package
      pip: name=docker-py
 
