--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -16,6 +16,7 @@
    - name: Running the container
      docker_container:
        image: tomcat:latest
+       name: tomcat
        state: running
 
    - name: Configure Tomcat users
