change deploy to use docker

--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -17,7 +17,7 @@
      docker_container:
        image: tomcat:latest
        name: tomcat
-       state: running
+       state: started
 
    - name: Configure Tomcat users
      copy:
