change deploy to use docker

--- a/deploy-playbook.yml
+++ b/deploy-playbook.yml
@@ -15,7 +15,7 @@
 
    - name: Running the container
      docker_container:
-       image: tomcat:latest
+       image: tomcat
        name: tomcat
        state: started
 
